# QTSession1

./: CMakeLists.txt  README.md  Student.h  main.cpp
